2010-01-07  Stephanie Lewis  <slewis@apple.com>

        Rollout http://trac.webkit.org/changeset/52756 due to a large performance regression.

        * fast/forms/selection-layout-reentry-strange-case-expected.txt: Removed.
        * fast/forms/selection-layout-reentry-strange-case.html: Removed.

2010-01-07  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        SVGTextElement & friends need to implement svgAttributeChanged
        https://bugs.webkit.org/show_bug.cgi?id=33284

        * svg/dynamic-updates/SVGTRefElement-dom-href-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGTRefElement-dom-href-attr.html: Added.
        * svg/dynamic-updates/SVGTextElement-dom-transform-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGTextElement-dom-transform-attr.html: Added.
        * svg/dynamic-updates/SVGTextElement-svgdom-transform-prop-expected.txt: Added.
        * svg/dynamic-updates/SVGTextElement-svgdom-transform-prop.html: Added.
        * svg/dynamic-updates/script-tests/SVGTRefElement-dom-href-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGTextElement-dom-transform-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGTextElement-svgdom-transform-prop.js: Added.
        (executeTest):

2010-01-07  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Geoffrey Garen.

        https://bugs.webkit.org/show_bug.cgi?id=33057
        REGRESSION(r49365): typeof(xhr.responseText) != "string" in Windows

        <rdar://problem/7296920> REGRESSION: WebKit fails to start PeaceKeeper benchmark

        * fast/js/script-tests/webcore-string-comparison.js: Added.
        * fast/js/webcore-string-comparison-expected.txt: Added.
        * fast/js/webcore-string-comparison.html: Added.

2010-01-07  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Kevin Decker, Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=33338