@@ -1,3 +1,12 @@
+2010-01-07  Afonso R. Costa Jr.  <afonso.costa@openbossa.org>
+
+        Reviewed by Darin Adler.
+
+        As the bug https://bugs.webkit.org/show_bug.cgi?id=30034 is fixed,
+        the zoomOrNot argument is unnecessary.
+
+        * fast/dom/elementFromPoint-relative-to-viewport.html:
+
 2010-01-07  Stephanie Lewis  <slewis@apple.com>
 
         Rollout http://trac.webkit.org/changeset/52756 due to a large performance regression.
